--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,11 +1,24 @@
 spring.application.name=sop
 
+# Configuração do banco
 spring.datasource.url=jdbc:postgresql://localhost:5432/sop
 spring.datasource.username=postgres
 spring.datasource.password=123456
 
-spring.jpa.hibernate.ddl-auto=none
+# Dialeto do Hibernate para PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Criação automática de tabelas
+spring.jpa.hibernate.ddl-auto=update
+
+# Mostrar SQL no terminal (opcional, mas útil pra ver o que tá rolando)
 spring.jpa.show-sql=true
+
+# Formatar o SQL (deixa legível)
 spring.jpa.properties.hibernate.format_sql=true
 
-spring.sql.init.mode=always
+# Timezone do Hibernate (evita bugs com datas)
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
